--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body{
+    color: dimgray;
     font-family: YuGothic, '游ゴシック', sans-serif;
 }
 #left_side{
@@ -89,7 +90,7 @@ body{
 
 .contents{
     width: 100%;
-    height: 100%;
+    height: 90%;
     text-align: center;
 }
 #smoothplay1{
@@ -102,14 +103,42 @@ body{
     background-color: greenyellow;
 }
 #smoothplay4{
-    background-color: lightpink;
+    position: absolute;
+    position: relative;
+}
+#train{
+    position: absolute;
+    left: -1%;
+    top: 8%;
+}
+#address{
+    position: absolute;
+    left: 8%;
+    top: 75%;
+    text-align: left;
+}
+#map{
+    position: absolute;
+    left: 40%;
+    top: 21%;
 }
 #smoothplay5{
-    background-color: lightgreen;
+    position: absolute;
+    position: relative;
+}
+#mail{
+    position:absolute;
+    left: 46%;
+    top: 13%;
+}
+#otoiawase{
+    position: absolute;
+    left: 8%;
+    top: 30%;
+    text-align: left;
 }
 #smoothplay6{
     background-color: orange;
 }
 #smoothplay7{
-    background-color: lightyellow;
 }
