--- a/css/index.css
+++ b/css/index.css
@@ -99,9 +99,13 @@ body{
 }
 #akisaitoha{
     position: absolute;
-    top:15%;
+    top:20%;
     left: 8%;
     text-align: left;
+}
+#daihyou{
+    position: absolute;
+    left: 55%;
 }
 #smoothplay2{
     position: absolute;
@@ -160,18 +164,19 @@ body{
 #train{
     position: absolute;
     left: -1%;
-    top: 8%;
+    top: 22%;
 }
 #address{
     position: absolute;
     left: 8%;
-    top: 55%;
+    top: 69%;
     text-align: left;
 }
-#map{
+#access_right{
     position: absolute;
-    left: 40%;
-    top: 15%;
+    text-align: left;
+    top:50%;
+    left:50%;
 }
 #smoothplay5{
     position: absolute;
@@ -179,13 +184,13 @@ body{
 }
 #mail{
     position:absolute;
-    left: 46%;
+    left: 50%;
     top: 13%;
 }
 #otoiawase{
     position: absolute;
     left: 8%;
-    top: 30%;
+    top: 33%;
     text-align: left;
 }
 #smoothplay6{
