--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,8 @@
-@media screen and (max-width:480px){
+@media screen and (max-width:640px){
 html,body{
-    width: 100%;
     display: block;
+    color: dimgray;
+    font-family: YuGothic, '游ゴシック', sans-serif;
 }
 #left_side{
     width: 0%;
@@ -9,18 +10,142 @@ html,body{
 }
 #right_side{
     position:relative;
+    display: none;
+    width: 100%;   
+}
+.contents{
     width: 100%;
-    display: none;
+    height: 90%;
+    text-align: center;
 }
-#keio{
-    display: none;
-    width: 0%;
+#smoothplay1{
+    position: absolute;
+    position: relative;  
 }
-#logo{
+#akisaitoha{
+    position: absolute;
+    top:30%;
+    left: 8%;
+    text-align: left;
+}
+#daihyou{
+    position: absolute;
+    top: 15%;
+    left: 55%;
+}
+#smoothplay2{
+    position: absolute;
+    position: relative; 
+}
+#syougai{
+    position: absolute;
+    top:15%;
+    left: 45%;
+}
+#greeding{
+    position: relative;
+    position: absolute;
+    left: 5%;
+    top: 15%;
+    width: 87%;
+    height: 30%;
+}
+#honbun{
+    font-family: YuGothic, '游ゴシック', sans-serif;
+    width: 87%;
+    position: absolute;
+    top: 25%;
+    left: 8%;
+    text-align: left;
+}
+
+#smoothplay3{
+    position: absolute;
+    position: relative;
+}
+#info{
+    text-align: left;
+    position: absolute;
+    left: 8%;
+    top: 20%;
     
 }
+#twitter{
+    position: absolute;
+    top: 33%;
+    left: 8%;
+    width: 30%;
+}
+#facebook{
+    position: absolute;
+    top: 36%;
+    left: 50%;
+    width: 30%;
+    height: auto;
+}
+#smoothplay4{
+    position: absolute;
+    position: relative;
+}
+#train{
+    position: absolute;
+    left: -1%;
+    top: 22%;
+}
+#access_right{
+    position: absolute;
+    text-align: left;
+    top:50%;
+    left:50%;
+}
+#smoothplay5{
+    position: absolute;
+    position: relative;
+}
+#mail{
+    position:absolute;
+    left: 50%;
+    top: 13%;
+}
+#otoiawase{
+    position: absolute;
+    left: 8%;
+    top: 33%;
+    text-align: left;
+}
+#smoothplay6{
+    position: absolute;
+    position: relative;
+}
+#camera{
+    position: absolute;
+    left: -1%;
+    top: 22%;    
+}
+#gallery_text{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    text-align: left;
+}
+    
+    
+h1{
+    font-size: 20px;
+    letter-spacing: 4px;
+}
+
+
 #topmenu{
     display: block;
+}
+#keio{
+    position: absolute;
+    top:4%;
+}
+#logo{
+    position: absolute;
+    top: 15%;   
 }
 .smart_menu{
     float: left;
@@ -28,44 +153,44 @@ html,body{
 #smart_about{
     width: 28%;
     position:absolute;
-    top: 25%;
+    top: 60%;
     left:35%;
 }
 #smart_news{
     width: 20%;
     position:absolute;
-    top: 22%;
+    top: 57%;
     left:5%;
 }
 #smart_sponsor{
     width: 30%;
     position:absolute;
-    top: 39%;
+    top: 74%;
     left:6%;
 }
 #smart_access{
     width: 22%;
     position:absolute;
-    top: 17%;
+    top: 53%;
     left:67%;
 }
 #smart_contact{
     width: 26%; 
     position:absolute;
-    top: 55%;
-    left:29%;
+    top: 90%;
+    left:31%;
 }
 #smart_gallery{
     width: 31%;
     position:absolute;
-    top: 40%;
+    top: 75%;
     left:60%;
 }
 #smart_shinkan{
     width: 19%;
     position:absolute;
-    top: 10%;
-    left:30%;
+    top: 43%;
+    left:26%;
 }
     
 #smart_about:hover{
@@ -174,9 +299,12 @@ animation: rumble 0.9s linear infinite;
 100%	{transform:rotate(0deg)	translate(0,0);}
 }
    
-    
+#akisai_web_top{
+    width: 0%;
+    display: none;
+}    
 }
-@media screen and (min-width:481px){
+@media screen and (min-width:641px){
 html,body{
     display: block;
     color: dimgray;
@@ -188,12 +316,6 @@ html,body{
     position:relative;
     position:fixed;
 }
-
-#keio{
-    position: absolute;
-    left: 23%;
-    text-align: center;
-}
 .sidemenu{
     display: block;
     width: 64%;
@@ -201,7 +323,6 @@ html,body{
     transition: all 0.3s ease;
     -webkit-transition: all 0.25s ease;
 }
-
 .sidemenu:hover:nth-child(2n){
     transform: rotate(14deg);
     -webkit-transform: rotate(14deg);
@@ -279,12 +400,13 @@ html,body{
 }
 #akisaitoha{
     position: absolute;
-    top:20%;
+    top:30%;
     left: 8%;
     text-align: left;
 }
 #daihyou{
     position: absolute;
+    top: 15%;
     left: 55%;
 }
 #smoothplay2{
@@ -346,12 +468,6 @@ html,body{
     left: -1%;
     top: 22%;
 }
-#address{
-    position: absolute;
-    left: 8%;
-    top: 69%;
-    text-align: left;
-}
 #access_right{
     position: absolute;
     text-align: left;
@@ -374,10 +490,22 @@ html,body{
     text-align: left;
 }
 #smoothplay6{
-    background-color: orange;
+    position: absolute;
+    position: relative;
 }
-#smoothplay7{
+#camera{
+    position: absolute;
+    left: -1%;
+    top: 22%;    
 }
+#gallery_text{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    text-align: left;
+}
+    
+    
 h1{
     font-size: 20px;
     letter-spacing: 4px;
