--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ html,body{
     display: none;
     width: 100%;   
 }
+/*
 .contents{
     width: 100%;
     height: 90%;
@@ -134,63 +135,73 @@ h1{
     font-size: 20px;
     letter-spacing: 4px;
 }
-
+*/
 
 #topmenu{
     display: block;
 }
-#keio{
+#keio2{
     position: absolute;
     top:4%;
+}
+#keio1{
+    width: 0%;
+    display: none;
 }
 #logo{
     position: absolute;
     top: 15%;   
 }
+#top_greeding2{
+    position: absolute;
+    font-size: 13px;
+    top: 35%;
+    text-align: center
+}
 .smart_menu{
     float: left;
 }
 #smart_about{
-    width: 28%;
+    width: 34%;
     position:absolute;
-    top: 60%;
-    left:35%;
+    top: 64%;
+    left:31%;
 }
 #smart_news{
     width: 20%;
     position:absolute;
-    top: 57%;
+    top: 65%;
     left:5%;
 }
 #smart_sponsor{
     width: 30%;
     position:absolute;
-    top: 74%;
+    top: 82%;
     left:6%;
 }
 #smart_access{
     width: 22%;
     position:absolute;
-    top: 53%;
-    left:67%;
+    top: 55%;
+    left:62%;
 }
 #smart_contact{
     width: 26%; 
     position:absolute;
-    top: 90%;
-    left:31%;
+    top: 93%;
+    left:37%;
 }
 #smart_gallery{
     width: 31%;
     position:absolute;
-    top: 75%;
+    top: 80%;
     left:60%;
 }
 #smart_shinkan{
     width: 19%;
     position:absolute;
-    top: 43%;
-    left:26%;
+    top: 53%;
+    left:24%;
 }
     
 #smart_about:hover{
@@ -307,8 +318,14 @@ animation: rumble 0.9s linear infinite;
 @media screen and (min-width:641px){
 html,body{
     display: block;
-    color: dimgray;
+    color: #555555;
     font-family: YuGothic, '游ゴシック', sans-serif;
+}
+#keio1{
+    position: absolute;
+    width: 13%;
+    top: 5%;
+    left: 5%;
 }
 #left_side{
     width: 20%;
@@ -318,8 +335,8 @@ html,body{
 }
 .sidemenu{
     display: block;
-    width: 64%;
-    margin: 10% 13%;
+    width: 66%;
+    margin: 7% 13%;
     transition: all 0.3s ease;
     -webkit-transition: all 0.25s ease;
 }
@@ -337,7 +354,7 @@ html,body{
 }
 
 #smoothplay1_a{
-    margin-top: 60%;
+    margin-top: 97%;
 }
 .line{
     position: relative;
@@ -387,6 +404,7 @@ html,body{
     height: 800px;
     float: right;
     position: relative;
+    z-index: 0;
 }
 
 .contents{
@@ -397,6 +415,17 @@ html,body{
 #smoothplay1{
     position: absolute;
     position: relative;  
+}
+#akisai_web_top{
+    z-index: 0;
+}    
+#top_greeding1{
+    z-index: 1;
+    position: absolute;
+    top: 70%;
+    left: 4%;
+    text-align: center;
+    font-size: 18px;
 }
 #akisaitoha{
     position: absolute;
