--- a/css/link.css
+++ b/css/link.css
@@ -94,7 +94,7 @@ html,body{
     width: 70%;
     position: absolute;
     left: 10%;
-    top: 2%;
+    top: 3%;
 }
 .yajirushi{
     font-size: 10px;
@@ -294,7 +294,13 @@ html,body{
     font-size: 10px;
     color:#848484;
     position: relative;
-    left: 7%;
+    left:13%;
+}
+.yajirushi2{
+    font-size: 10px;
+    color:#848484;
+    position: relative;
+    left:31%;
 }
 #syuyou{
     position: absolute;
@@ -305,5 +311,9 @@ html,body{
     position: absolute;
     top: 62%;
     left: 55%;
+}
+.yajirushi3{
+    position: relative;
+    top: -8px;
 }
 /*終了*/
