access  cssきょうごうかいじょ

--- a/css/link.css
+++ b/css/link.css
@@ -144,7 +144,7 @@ html,body{
 }
 #syuyou{
     position: absolute;
-    top: 62%;
+    top: 65%;
     left: 5%;
 }
 #moyori{
@@ -153,7 +153,7 @@ html,body{
     left: 5%;
 } 
 #link_map{
-    width: 130%
+    width: 130%;
 }   
 #s_shinkan{
     position: absolute;
